// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`qweb t-tag > a hyphenated default tag is replaced whole 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { checkTagName } = helpers;
  
  let block1 = tag => createBlock(\`<\${tag || 'my-el'}>x</\${tag || 'my-el'}>\`);
  
  return function template(ctx, node, key = "") {
    const tag1 = checkTagName(ctx['tag']);
    return toggler(tag1, block1(tag1)());
  }
}"
`;

exports[`qweb t-tag > a tag name that would open an attribute is rejected 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { checkTagName } = helpers;
  
  let block1 = tag => createBlock(\`<\${tag || 't'}>x</\${tag || 't'}>\`);
  
  return function template(ctx, node, key = "") {
    const tag1 = checkTagName(ctx['tag']);
    return toggler(tag1, block1(tag1)());
  }
}"
`;

exports[`qweb t-tag > a tag name the block compiler would read otherwise is rejected 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { checkTagName, safeOutput } = helpers;
  
  let block1 = tag => createBlock(\`<\${tag || 't'}>x<block-child-0/></\${tag || 't'}>\`);
  
  return function template(ctx, node, key = "") {
    const tag1 = checkTagName(ctx['tag']);
    const b2 = safeOutput(ctx['v'], key, "__1");
    return toggler(tag1, block1(tag1)([], [b2]));
  }
}"
`;

exports[`qweb t-tag > can fallback if falsy tag 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { checkTagName } = helpers;
  
  let block1 = tag => createBlock(\`<\${tag || 'fallback'}/>\`);
  
  return function template(ctx, node, key = "") {
    const tag1 = checkTagName(ctx['tag']);
    return toggler(tag1, block1(tag1)());
  }
}"
`;

exports[`qweb t-tag > can update 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { checkTagName } = helpers;
  
  let block1 = tag => createBlock(\`<\${tag || 't'}/>\`);
  
  return function template(ctx, node, key = "") {
    const tag1 = checkTagName(ctx['tag']);
    return toggler(tag1, block1(tag1)());
  }
}"
`;

exports[`qweb t-tag > simple usecases 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { checkTagName } = helpers;
  
  let block1 = tag => createBlock(\`<\${tag || 't'}/>\`);
  
  return function template(ctx, node, key = "") {
    const tag1 = checkTagName('div');
    return toggler(tag1, block1(tag1)());
  }
}"
`;

exports[`qweb t-tag > simple usecases 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { checkTagName } = helpers;
  
  let block1 = tag => createBlock(\`<\${tag || 't'}>text</\${tag || 't'}>\`);
  
  return function template(ctx, node, key = "") {
    const tag1 = checkTagName(ctx['tag']);
    return toggler(tag1, block1(tag1)());
  }
}"
`;

exports[`qweb t-tag > with multiple attributes 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { checkTagName } = helpers;
  
  let block1 = tag => createBlock(\`<\${tag || 't'} class="blueberry" taste="raspberry">gooseberry</\${tag || 't'}>\`);
  
  return function template(ctx, node, key = "") {
    const tag1 = checkTagName(ctx['tag']);
    return toggler(tag1, block1(tag1)());
  }
}"
`;

exports[`qweb t-tag > with multiple child nodes 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { checkTagName } = helpers;
  
  let block1 = tag => createBlock(\`<\${tag || 't'}> pear <span>apple</span> strawberry </\${tag || 't'}>\`);
  
  return function template(ctx, node, key = "") {
    const tag1 = checkTagName(ctx['tag']);
    return toggler(tag1, block1(tag1)());
  }
}"
`;

exports[`qweb t-tag > with multiple t-tag in same template 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { checkTagName } = helpers;
  
  let block1 = tag => createBlock(\`<\${tag || 't'}><block-child-0/></\${tag || 't'}>\`);
  let block2 = tag => createBlock(\`<\${tag || 't'}>baz</\${tag || 't'}>\`);
  
  return function template(ctx, node, key = "") {
    const tag1 = checkTagName(ctx['outer']);
    const tag2 = checkTagName(ctx['inner']);
    const b2 = toggler(tag2, block2(tag2)());
    return toggler(tag1, block1(tag1)([], [b2]));
  }
}"
`;

exports[`qweb t-tag > with multiple t-tag in same template, part 2 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { checkTagName } = helpers;
  
  let block2 = tag => createBlock(\`<\${tag || 't'}>bar</\${tag || 't'}>\`);
  let block3 = tag => createBlock(\`<\${tag || 't'}>baz</\${tag || 't'}>\`);
  
  return function template(ctx, node, key = "") {
    const tag1 = checkTagName(ctx['brother']);
    const b2 = toggler(tag1, block2(tag1)());
    const tag2 = checkTagName(ctx['brother']);
    const b3 = toggler(tag2, block3(tag2)());
    return multi([b2, b3]);
  }
}"
`;
